<resources>
    <string name="app_name">mySkyDiveLogBook</string>
    <string name="jumpNumber">Jump #</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="uspaMembership">USPA Membership #</string>
    <string name="uspaLicense">USPA License</string>
    <string name="lastJump">Last Jump</string>
    <string name="joshleppo">Josh Leppo</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="aircraftType">Aircraft Type</string>
    <string name="equipmentUsed">Equipment Used</string>
    <string name="exitAlt">Exit Altitude</string>
    <string name="maneuvers">Maneuvers</string>
    <string name="delay">Delay</string>
    <string name="total">Total</string>
    <string name="surfaceWind">Surface Wind</string>
    <string name="distToTarget">Dist to Target</string>
    <string name="signature">Signature</string>
    <string name="notes">Notes</string>
    <string name="initializing">...Initializing</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="menuSettings">Settings</string>
    <string name="update">Update</string>
    <string name="upload">Upload</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_logon">LogonActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>