<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jumpNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jumpNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/jumpNumberDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="@id/jumpNumberLabel"
        app:layout_constraintTop_toBottomOf="@id/jumpNumberLabel" />


    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:enabled="true"
        android:hint="Your Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/uspaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/uspaMembership"
        app:layout_constraintStart_toStartOf="@+id/nameDisplay"
        app:layout_constraintTop_toBottomOf="@id/nameDisplay" />

    <EditText
        android:id="@+id/upsaNumberDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/uspaLabel"
        app:layout_constraintTop_toBottomOf="@+id/uspaLabel" />

    <TextView
        android:id="@+id/uspaLicenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uspaLicense"
        app:layout_constraintStart_toStartOf="@id/uspaLabel"
        app:layout_constraintTop_toTopOf="@id/lastJumpLabel"/>

    <EditText
        android:id="@+id/uspaLicenseDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/uspaLicenseLabel"
        app:layout_constraintStart_toStartOf="@id/uspaLicenseLabel"/>

    <TextView
        android:id="@+id/lastJumpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lastJump"
        app:layout_constraintStart_toStartOf="@id/jumpNumberLabel"
        app:layout_constraintTop_toBottomOf="@id/jumpNumberDisplay"/>

    <TextView
        android:id="@+id/lastJumpDiplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/lastJumpLabel"
        app:layout_constraintStart_toStartOf="@id/lastJumpLabel"
        app:layout_constraintBottom_toBottomOf="@+id/uspaLicenseDisplay"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="47dp">

        <Button
            android:id="@+id/addButton"
            android:text="@string/add"
            android:onClick="add"
            android:background="@color/purple_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/viewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:text="@string/view"
            android:onClick="view"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>